--- a/TiaTeresa/Views/Home/Index.cshtml
+++ b/TiaTeresa/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Willkommen bei Tia Teresa!</h1>
+<center><img src="/images/bienvenidos.jpg" width="350"></center>
+
 
 </div>
