--- a/TiaTeresa/Views/Vokabel/Index.cshtml
+++ b/TiaTeresa/Views/Vokabel/Index.cshtml
@@ -7,9 +7,9 @@
 <h1>Vokabelliste</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Vokabel hinzufügen</a>
 </p>
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
@@ -31,11 +31,12 @@
                 @Html.DisplayFor(modelItem => item.Deutsch)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Bearbeiten</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Löschen</a>
             </td>
         </tr>
 }
+
     </tbody>
 </table>
