--- a/TiaTeresa/wwwroot/css/site.css
+++ b/TiaTeresa/wwwroot/css/site.css
@@ -20,3 +20,37 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+
+
+/* Tooltipp*/
+
+.spanisch-satz {
+    position: relative;
+    cursor: pointer;
+}
+
+.spanisch-satz::after {
+    content: attr(data-deutsch);
+    font-size: x-small;
+    position: absolute;
+    bottom: 100%; /* Tooltipp über Text */
+    left: 50%;
+    transform: translateX(-50%); /* Zentral */
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    border-radius: 5px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.2s;
+    white-space: nowrap;
+    z-index: 1; /* Vor Text */
+}
+
+.spanisch-satz:hover::after {
+    visibility: visible;
+    opacity: 1;
+}
+
