--- a/TiaTeresa/Views/Geschichte/Index.cshtml
+++ b/TiaTeresa/Views/Geschichte/Index.cshtml
@@ -3,16 +3,16 @@
 
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Neue Geschichte</a>
 </p>
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TitelSpanisch)
+                Titel Spanisch
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TitelDeutsch)
+                Titel Deutsch
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Niveau)
@@ -33,10 +33,13 @@
                 @Html.DisplayFor(modelItem => item.Niveau)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+                <a asp-action="Details" asp-route-id="@item.Id">Lesen</a> 
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a asp-action="Edit" asp-route-id="@item.Id">Bearbeiten</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Löschen</a>
+                }
+                </td>
         </tr>
 }
     </tbody>
