--- a/TiaTeresa/Views/Vokabel/Index.cshtml
+++ b/TiaTeresa/Views/Vokabel/Index.cshtml
@@ -31,12 +31,31 @@
                 @Html.DisplayFor(modelItem => item.Deutsch)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Bearbeiten</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Löschen</a>
-            </td>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
+                    <a asp-action="Edit" asp-route-id="@item.Id">Bearbeiten</a> 
+                    <a asp-action="Delete" asp-route-id="@item.Id">Löschen</a> 
+                }
+                </td>
         </tr>
+
 }
 
     </tbody>
 </table>
+
+
+       @if (ViewBag.TotalPages > 1)
+        {
+            <nav>
+                <ul class="pagination">
+                    @for (int i = 1; i <= ViewBag.TotalPages; i++)
+                    {
+                        <li class="page-item @(ViewBag.CurrentPage == i ? "active" : "")">
+                            <a class="page-link" asp-action="Index" asp-route-page="@i">@i</a>
+                        </li>
+                    }
+                </ul>
+            </nav>
+        }
