--- a/TiaTeresa/Views/Vokabel/Index.cshtml
+++ b/TiaTeresa/Views/Vokabel/Index.cshtml
@@ -7,7 +7,10 @@
 <h1>Vokabelliste</h1>
 
 <p>
-    <a asp-action="Create">Vokabel hinzufügen</a>
+    @if (User.Identity.IsAuthenticated)
+                {
+                     <a asp-action="Create">Vokabel hinzufügen</a>
+                }
 </p>
 <table class="table table-striped">
     <thead>
