--- a/TiaTeresa/wwwroot/css/site.css
+++ b/TiaTeresa/wwwroot/css/site.css
@@ -1,51 +1,47 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
-
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
-body 
-{
-  margin-bottom: 60px;
-  padding-bottom: 80px;
+body {
+    margin-bottom: 60px;
+    padding-bottom: 80px;
 }
 
-
- Tooltipp
+/* Tooltipp */
 
 .spanisch-satz {
     position: relative;
     cursor: pointer;
 }
 
-.spanisch-satz::after {
-    content: attr(data-deutsch);
-    font-size: x-small;
-    position: absolute;
-    bottom: 100%;  Tooltipp über Text 
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 5px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    border-radius: 5px;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.2s;
-    white-space: nowrap;
-    z-index: 1;  Vor Text 
-}
+    .spanisch-satz::after {
+        content: attr(data-deutsch);
+        font-size: x-small;
+        position: absolute;
+        bottom: 100%; /* Tooltipp über Text */
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 5px;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        border-radius: 5px;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.2s;
+        white-space: nowrap;
+        z-index: 1; /* Vor Text */
+    }
 
-.spanisch-satz:hover::after {
-    visibility: visible;
-    opacity: 1;
-}
-
+    .spanisch-satz:hover::after {
+        visibility: visible;
+        opacity: 1;
+    }
