--- a/TiaTeresa/Views/Vokabel/Index.cshtml
+++ b/TiaTeresa/Views/Vokabel/Index.cshtml
@@ -4,12 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Vokabelliste</h1>
-
 <p>
     @if (User.Identity.IsAuthenticated)
                 {
-                     <a asp-action="Create">Vokabel hinzufügen</a>
+                     <a asp-action="Create" class="btn btn-primary">Vokabel hinzufügen</a>
                 }
 </p>
 <table class="table table-striped">
@@ -34,12 +32,11 @@
                 @Html.DisplayFor(modelItem => item.Deutsch)
             </td>
             <td>
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
-                    <a asp-action="Edit" asp-route-id="@item.Id">Bearbeiten</a> 
-                    <a asp-action="Delete" asp-route-id="@item.Id">Löschen</a> 
-                }
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary ms-1">Bearbeiten</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger ms-1">Löschen</a>
+                    }
                 </td>
         </tr>
 
