--- a/TiaTeresa/Views/Geschichte/Create.cshtml
+++ b/TiaTeresa/Views/Geschichte/Create.cshtml
@@ -33,6 +33,17 @@
                 <span asp-validation-for="Deutsch" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Bild" class="control-label"></label>
+                <input asp-for="Bild" class="form-control" />
+                <span asp-validation-for="Bild" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Audio" class="control-label"></label>
+                <input asp-for="Audio" class="form-control" />
+                <span asp-validation-for="Audio" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="Niveau" class="control-label"></label>
                 <input asp-for="Niveau" class="form-control" />
                 <span asp-validation-for="Niveau" class="text-danger"></span>
