--- a/TiaTeresa/Views/Geschichte/Edit.cshtml
+++ b/TiaTeresa/Views/Geschichte/Edit.cshtml
@@ -39,6 +39,17 @@
                 <span asp-validation-for="Niveau" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Bild" class="control-label"></label>
+                <input asp-for="Bild" class="form-control" />
+                <span asp-validation-for="Bild" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Audio" class="control-label"></label>
+                <input asp-for="Audio" class="form-control" />
+                <span asp-validation-for="Audio" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
