--- a/TiaTeresa/Views/Geschichte/Index.cshtml
+++ b/TiaTeresa/Views/Geschichte/Index.cshtml
@@ -5,17 +5,14 @@
 <p>
      @if (User.Identity.IsAuthenticated)
                 {
-                     <a asp-action="Create">Neue Geschichte</a>
+                         <a asp-action="Create" class="btn btn-primary">Neue Geschichte</a>
                 }
 </p>
-<table class="table table-striped">
+<table class="table table-striped" class="mb-4">
     <thead>
         <tr>
             <th>
                 Titel Spanisch
-            </th>
-            <th>
-                Titel Deutsch
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Niveau)
@@ -27,20 +24,17 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.TitelSpanisch)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TitelDeutsch)
+                    <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.TitelSpanisch)</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Niveau)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.Id">Lesen</a> 
+                   
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <a asp-action="Edit" asp-route-id="@item.Id">Bearbeiten</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Löschen</a>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary ms-1">Bearbeiten</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger ms-1">Löschen</a>
                 }
                 </td>
         </tr>
