--- a/TiaTeresa/Views/Shared/_Layout.cshtml
+++ b/TiaTeresa/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Sprichwort" asp-action="Index">Sprichwörter</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Ort" asp-action="Index">Sightseeing</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -49,7 +52,7 @@
 
     <footer class="bg-light text-center text-muted py-2 mt-4 border-top small">
         <div class="container">
-            &copy; 2025 - TiaTeresa - <a asp-controller="Home" asp-action="Privacy" class="text-muted">Privacy</a>
+            &copy; 2025 - Sebastian Jegorow - <a asp-controller="Home" asp-action="Privacy" class="text-muted">Privacy</a>
         </div>
     </footer>
 
