--- a/TiaTeresa/Views/Home/Index.cshtml
+++ b/TiaTeresa/Views/Home/Index.cshtml
@@ -1,8 +1,53 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Tia Teresa";
 }
 
-<center><img src="/images/bienvenidos.jpg" width="350"></center>
+<body style="font-family: 'Segoe UI', sans-serif; color: #333; background-color: #fff;">
 
+    <div class="container mt-5">
 
-</div>
+        <!-- Begrüßung / Titelbild -->
+        <div class="text-center mb-5">
+            <img src="/images/bienvenidos.jpg" class="shadow-sm rounded-3" width="250" alt="Bienvenidos" />
+        </div>
+
+        <!-- Kachelbereich mit freier Mitte -->
+        <div class="row justify-content-center g-4">
+
+            <!-- Sprichwort -->
+            <div class="col-md-4 col-lg-4">
+                <div class="card border-0 shadow-sm rounded-4" style="background-color: #e6f0ff;">
+                    <div class="card-header bg-white border-bottom-0">
+                        <h5 class="mb-0 text-primary">Sprichwort des Tages</h5>
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote">
+                            <p>@ViewBag.Sprichwort</p>
+                            <footer class="blockquote-footer">@ViewBag.SprichwortÜbersetzung</footer>
+                        </blockquote>
+                        <a href="/Sprichwort" class="btn btn-sm mt-3" style="background-color: #0d6efd; color: white;">Mehr Sprichwörter</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Leere Mitte -->
+            <div class="col-md-4 col-lg-2"></div>
+
+            <!-- Vokabel -->
+            <div class="col-md-4 col-lg-4">
+                <div class="card border-0 shadow-sm rounded-4" style="background-color: #e6f0ff;">
+                    <div class="card-header bg-white border-bottom-0">
+                        <h5 class="mb-0 text-primary">Vokabel des Tages</h5>
+                    </div>
+                    <div class="card-body">
+                        <h4>@ViewBag.Vokabel</h4>
+                        <p>@ViewBag.VokabelÜbersetzung</p>
+                        <a href="/Vokabel" class="btn btn-sm mt-3" style="background-color: #0d6efd; color: white;">Zur Vokabelliste</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</body>
