--- a/TiaTeresa/Views/Home/Index.cshtml
+++ b/TiaTeresa/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                         <div class="card-body">
                             <blockquote class="blockquote">
                                 <p>@ViewBag.Sprichwort</p>
-                                <footer class="blockquote-footer">@ViewBag.SprichwortÜbersetzung</footer>
+                                <footer class="blockquote-footer">@ViewBag.Sprichwortuebersetzung</footer>
                             </blockquote>
                             <a href="/Sprichwort" class="btn btn-sm mt-3" style="background-color: #0d6efd; color: white;">Mehr Sprichwörter</a>
                         </div>
@@ -56,7 +56,7 @@
                         </div>
                         <div class="card-body">
                             <h4>@ViewBag.Vokabel</h4>
-                            <p>@ViewBag.VokabelÜbersetzung</p>
+                            <p>@ViewBag.Vokabeluebersetzung</p>
                             <a href="/Vokabel" class="btn btn-sm mt-3" style="background-color: #0d6efd; color: white;">Zur Vokabelliste</a>
                         </div>
                     </div>
