--- a/TiaTeresa/Views/Home/tiateresaprofil.cshtml
+++ b/TiaTeresa/Views/Home/tiateresaprofil.cshtml
@@ -30,15 +30,17 @@
     <div class="row mt-3">
         <div class="col">
             <p>
-                <strong>Tia Teresa</strong> möchte dir auf dieser Seite beim Spanisch-Lernen helfen. Mit ihr kannst du Vokabeln lernen und sie liest dir Geschichten im Spanischen vor.
+                <strong>Tia Teresa</strong> unterstützt dich beim Spanischlernen.</p>
+                <p>
+                Mit ihrer Hilfe kannst du Vokabeln üben, spanische Geschichten hören, die spanische Texte über interessante Orte durchlesen und nützliche Redewendungen entdecken.
             </p>
             <p>
-                Unter <em>Geschichten</em> findest du einige Geschichten in spanischer Sprache. Mit dem Mauscursor kannst du eine
-                Übersetzung des Satzes einblenden lassen, und Teresa liest dir die Geschichten auf Wunsch vor.
+                Unter „Geschichten“ findest du kurze Erzählungen auf Spanisch. Du kannst dir jede der Geschichten von Teresa vorlesen lassen – und per Mauszeiger eine passende Übersetzung einblenden.
             </p>
             <p>
-                Zudem findest du auf der Seite einige weitere Lernhilfen wie Sprichwörter, die dir beim Einstieg in die Sprache helfen.
+                Außerdem erwarten dich weitere Lernhilfen wie Sprichwörter, die dir den Einstieg in die spanische Sprache erleichtern.
             </p>
+            
         </div>
     </div>
 </div>
