--- a/TiaTeresa/Views/Shared/_Layout.cshtml
+++ b/TiaTeresa/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-controller="Vokabel" asp-action="Trainer">Vokabeltrainer</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Zahl" asp-action="Trainer">Zahlen</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Geschichte" asp-action="Index">Geschichten</a>
                         </li>
                         <li class="nav-item">
