--- a/TiaTeresa/Views/Geschichte/Details.cshtml
+++ b/TiaTeresa/Views/Geschichte/Details.cshtml
@@ -32,7 +32,12 @@
 {
 <div>
     <center>
+        <table>
+            <tr>
+                <td>
         <img src="/images/tiateresaplayer.png" alt="Tia Teresa liest" style="width:200px;" />
+                    </td>
+                    <td>
 
         <p>Escucha a Tía Teresa:</p>
         <audio id="player" src="@audio"></audio>
@@ -56,7 +61,9 @@
               btn.textContent = '▶';
             };
         </script>
-
+                    </td>
+                </tr>
+            </table>
     </center>
 </div>
 }
